<resources>
    <string name="app_name">mVax</string>
    <string name="version">Version: 1.0</string>
    <string name="title_activity_login">Sign in</string>
    <string name="auth_fail_bad_credentials">Incorrect email or password</string>
    <string name="auth_fail_disabled_user">User has not been approved by administrator</string>
    <string name="firebase_fail_no_connection">Unable to detect internet connection</string>
    <string name="firebase_fail_unknown">An unknown error occurred</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="resetPassword">Forgot password?</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_empty_field">Required field</string>
    <string name="email_field_mismatch">Email fields must match</string>
    <string name="password_field_mismatch">Password fields must match</string>
    <string name="request_submit_success">Account request successfully submitted</string>
    <string name="error_used_email">Account already registered with this email</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="emptystring" />
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_patients">Patients</string>
    <string name="title_settings">Settings</string>
    <string name="title_overdue">Overdue Patients</string>
    <string name="title_summary">Summary</string>
    <string name="patients">Patients</string>
    <string name="title_forms">Forms</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_login">Welcome to mVax!</string>
    <string name="LOGIN_SIGNIN">Sign In</string>
    <string name="LOGIN_REGISTER">Request an account</string>
    <string name="REG_DESCRIPTION">Please fill out the following form to get started. After completion, an administrator will have to approve you and then a confirmation email will be sent to your account</string>
    <string name="REG_TITLE">New User Registration</string>
    <string name="REG_ButtonReg">Register</string>
    <string name="REG_NAME">First Name</string>
    <string name="REG_NAME_LAST">Last Name</string>
    <string name="REG_EMAIL">Email</string>
    <string name="REG_PASS_REQUIRE">Password must be at least 8 characters and must contain at least one uppercase letter, one lowercase letter, a number, and a special character.</string>
    <string name="REG_PASSWORD">Password</string>
    <string name="REG_PASSWORD_CONFIRM">Confirm Password</string>
    <string name="REG_ERROR_EMAIL">Invalid email address</string>
    <string name="REG_ERROR_PASS_REQUIRE">Password does not satisfy requirements</string>
    <string name="REG_ERROR_PASS_CONFIRM">Passwords do not match</string>
    <string name="REG_CONFIRMED">Request submitted, wait to be approved!</string>
    <string name="userRoles">Account Permission Level</string>
    <string name="modal_user_decision_title">Approve User Request?</string>
    <string name="approve_user">Approve</string>
    <string name="deny_user">Deny</string>
    <string name="uid">uid</string>
    <string name="user_not_approved">User not approved yet</string>
    <string name="no_user_role">Unable to determine user role</string>
    <string name="timeout_title">Session Timeout</string>
    <string name="timeout_msg">You have been inactive for too long. You will now be logged out.</string>
    <string name="change_timeout">Change Timeout Duration</string>
    <string name="modal_timeout_title">Change Timeout Duration</string>
    <string name="timeout_save_change">Save Change</string>
    <string name="current_timeout">Current Timeout Duration: </string>
    <string name="timeout_unit">seconds</string>
    <string name="modal_register_title">Request New Account</string>
    <string name="modal_register_subtitle">You can request an mVax account by providing your name and email and tapping Submit. An mVax administrator will then approve or deny your request for an account. Upon approval, you can log into mVax.\n\nYour password must have at least one uppercase letter, one lowercase letter, one digit, and one special character.</string>
    <string name="hint_register_display_name">full name</string>
    <string name="hint_register_email">email address</string>
    <string name="hint_register_email_confirm">confirm email address</string>
    <string name="hint_register_password">password</string>
    <string name="hint_register_password_confirm">confirm password</string>
    <string name="request_submit_fail">There is already an existing user or an existing user request associated with this email</string>
    <string name="request_submit_unknown_fail">User account request was not successful; try submitting your request again</string>
    <string name="modal_reset_title">Password Reset</string>
    <string name="modal_reset_password_subtitle">Enter your email address and tap Submit. An email will be sent to you with password reset instructions if the provided email address is associated with an mVax account.</string>
    <string name="hint_reset_email">email address</string>
    <string name="button_reset_password_submit">Submit</string>
    <string name="button_reset_password_cancel">Cancel</string>
    <string name="reset_email_confirm">Password reset request submitted</string>
    <string name="password_reset_confirm">Are you sure you want to reset your password?</string>
    <string name="modal_update_title">Update Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="update_email_success">Update request submitted</string>
    <string name="language">Language</string>
    <string name="spanish">Change to Spanish</string>
    <string name="spanishCode">es</string>
    <string name="englishCode">en</string>
    <string name="spanishLocaleCode">[es]</string>
    <string name="usLocaleCode">[en_US]</string>
    <string name="update_email">Update Email</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="approve_users">Approve Users</string>
    <string name="current_users">Current Users</string>
    <string name="admin_priv">Administrator Privileges</string>
    <string name="user_settings">User Settings</string>
    <string name="approve_users_title">Approve New mVax Users</string>
    <string name="select_user_role">Select User Role</string>
    <string name="error_select_role">Must select user role for request</string>
    <string name="user_request_decision">Decision</string>
    <string name="approve_user_instructions">Select a role for a user. Then, tap Approve to create their mVax account, or tap Deny to deny their request.</string>
    <string name="no_user_requests">No user requests</string>
    <string name="no_role_selected">A role must be selected before a user can be approved</string>
    <string name="acceptance_email_subject">mVax User Registration Approved!</string>
    <string name="acceptance_email_body">Welcome! You have been approved to join mVax. You are now able to sign in with your credentials</string>
    <string name="rejection_email_subject">mVax User Registration Denied</string>
    <string name="rejection_email_body">Hello, your request to join mVax has been denied. Contact an administrator for more details.</string>
    <string name="user_request_download_fail">Unable to download user requests</string>
    <string name="user_download_fail">Unable to download current user info</string>
    <string name="role_info_title">Roles</string>
    <string name="role_info_desc">mVax supports two different roles: ADMIN and READER.\n\n
                                  An ADMIN can:\n
                                    &#8226; view all users and vaccine records\n
                                    &#8226; create new users and vaccine records\n
                                    &#8226; edit or delete existing data\n
                                    &#8226; approve new users\n
                                    &#8226; change the role of or deactivate existing users\n
                                  \n
                                  A READER can:\n
                                    &#8226; view all users and vaccination records</string>
    <string name="modal_approve_user_request_title">Approve user request</string>
    <string name="modal_approve_user_request_message">You\'ve chosen to confirm %1$s\'s request for a %2$s mVax account. Tap Confirm to activate the new account.</string>
    <string name="hint_password">password</string>
    <string name="hint_password_confirm">confirm password</string>
    <string name="button_approve_user_confirm">Confirm</string>
    <string name="button_approve_user_cancel">Cancel</string>
    <string name="welcome_email_subject">mVax Account Approved</string>
    <string name="welcome_email_body">Hello %1$s,\n\nYour request for an mVax account has been approved. An administrator has activated your account with %2$s privileges, and you can now use your email and password to log into mVax.\n\n\nThanks,\n\nThe mVax Team</string>
    <string name="welcome_email_error">Unable to send welcome email to new user</string>
    <string name="confirm_email_subject">mVax Account Request Received</string>
    <string name="confirm_email_body">Hello %1$s,\n\nWe have received your request for an mVax account. Please wait for an administrator to approve or deny your request. You will receive a confirmation email when your request has been reviewed.\n\n\nThanks,\n\nThe mVax Team</string>
    <string name="confirm_email_error">Unable to send confirmation email</string>
    <string name="modal_deny_user_request_title">Deny user request</string>
    <string name="modal_deny_user_request_message">Are you sure you want to deny this user\'s request for an mVax account? They will be able to request another account later if they wish.</string>
    <string name="modal_role_info_title">User Roles Types</string>
    <string name="admin_info">ADMIN: have access to read and write data. Only admin can input new records. Additionally, can approve new user requests and view current users</string>
    <string name="reader_info">READER: have access to see the data but cannot write any new information. Cannot handle other users.</string>
    <string name="current_users_title">Current mVax Users</string>
    <string name="user_name">NAME</string>
    <string name="user_email">EMAIL</string>
    <string name="user_role">ROLE</string>
    <string name="about">About</string>
    <string name="form_fragment_title">Export Forms</string>
    <string name="linv">LINV</string>
    <string name="form_info_title">Exporting Form Information</string>
    <string name="form_info_body1">The form page is used to autofill data from the database into a PDF copy of the forms listed.</string>
    <string name="form_info_body2">
        To start, simply click on which form you would like to export. Then a screen will pop up where you will have to provide
            additional information to narrow down what you want on the form. For the SINOVA this is the date you want the data from. For
            SINOVA 2 it is the month you want the data from. And for the LINV, it is which patients you want contained. </string>
    <string name="sinova">SINOVA</string>
    <string name="sinova2">SINOVA 2</string>
    <string name="dummy_data">Generate Test Data</string>
</resources>