<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="mhealth.mvax.dashboard.FormsFragment">

    <TextView
        android:id="@+id/form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/form_fragment_title"
        android:textSize="40sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/SINOVA"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:text="@string/sinova"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/SINOVA2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:text="@string/sinova2"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/LINV"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:text="@string/linv"
        android:textSize="30sp" />


</LinearLayout>
