<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="30dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modal_role_info_title"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/teal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_info"
        android:layout_marginStart="30sp"
        android:layout_gravity="center"
        android:gravity="left"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="25dp"
        android:textSize="25sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reader_info"
        android:layout_marginStart="30sp"
        android:layout_gravity="center"
        android:gravity="left"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="35dp"
        android:textSize="25sp"
        />
</LinearLayout>