<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="mhealth.mvax.auth.CurrentUsersFragment"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/currentUsersTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/current_users_title"
        android:textColor="@color/teal"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="30sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/user_name"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/emailHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/user_email"
            android:textSize="22sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/roleHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/user_role"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <ListView
        android:id="@+id/currentUsersLV"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:dividerHeight="10.0sp"
        android:textAlignment="viewStart"/>

    


</LinearLayout>
